--- a/KnightNews/JJVPreviewViewController.xib
+++ b/KnightNews/JJVPreviewViewController.xib
@@ -18,53 +18,56 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X9F-tc-wuk">
-                    <rect key="frame" x="20" y="283" width="280" height="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X9F-tc-wuk">
+                    <rect key="frame" x="20" y="279" width="280" height="23"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="Cq3-44-eKm"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6OB-qc-4zq">
-                    <rect key="frame" x="20" y="323" width="280" height="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6OB-qc-4zq">
+                    <rect key="frame" x="20" y="306" width="280" height="15"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="hKM-99-KbG"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Excerpt" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j82-5l-dVa">
-                    <rect key="frame" x="20" y="352" width="280" height="196"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Excerpt" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j82-5l-dVa">
+                    <rect key="frame" x="20" y="325" width="280" height="223"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="280" id="ajy-Gc-2aj"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wc8-uD-5sh">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wc8-uD-5sh">
                     <rect key="frame" x="20" y="20" width="280" height="255"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="255" id="KIf-8Y-3qA"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="j82-5l-dVa" secondAttribute="trailing" constant="20" id="2xN-BK-QDG"/>
-                <constraint firstItem="6OB-qc-4zq" firstAttribute="top" secondItem="X9F-tc-wuk" secondAttribute="bottom" constant="19" id="3Ee-71-kyT"/>
+                <constraint firstItem="6OB-qc-4zq" firstAttribute="top" secondItem="X9F-tc-wuk" secondAttribute="bottom" constant="4" id="3Ee-71-kyT"/>
                 <constraint firstItem="j82-5l-dVa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="4dn-ic-hFC"/>
                 <constraint firstItem="wc8-uD-5sh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="G30-5j-kCO"/>
                 <constraint firstAttribute="trailing" secondItem="wc8-uD-5sh" secondAttribute="trailing" constant="20" id="HD0-Rv-Zjs"/>
-                <constraint firstItem="X9F-tc-wuk" firstAttribute="top" secondItem="wc8-uD-5sh" secondAttribute="bottom" constant="8" id="bMz-X4-HF7"/>
-                <constraint firstItem="6OB-qc-4zq" firstAttribute="top" secondItem="X9F-tc-wuk" secondAttribute="bottom" constant="19" id="cTx-Te-BDd"/>
+                <constraint firstItem="j82-5l-dVa" firstAttribute="top" secondItem="6OB-qc-4zq" secondAttribute="bottom" constant="4" id="XUp-ty-eal"/>
+                <constraint firstItem="X9F-tc-wuk" firstAttribute="top" secondItem="wc8-uD-5sh" secondAttribute="bottom" constant="4" id="bMz-X4-HF7"/>
                 <constraint firstAttribute="trailing" secondItem="X9F-tc-wuk" secondAttribute="trailing" constant="20" id="dl1-b2-M6a"/>
                 <constraint firstAttribute="bottom" secondItem="j82-5l-dVa" secondAttribute="bottom" constant="20" id="eMb-PZ-Pdl"/>
                 <constraint firstItem="X9F-tc-wuk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="gNp-IO-oPw"/>
                 <constraint firstAttribute="trailing" secondItem="6OB-qc-4zq" secondAttribute="trailing" constant="20" id="jte-Vj-haO"/>
-                <constraint firstItem="X9F-tc-wuk" firstAttribute="top" secondItem="wc8-uD-5sh" secondAttribute="bottom" constant="8" id="nit-oK-bAe"/>
-                <constraint firstItem="6OB-qc-4zq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="svT-hA-cfN"/>
-                <constraint firstItem="j82-5l-dVa" firstAttribute="top" secondItem="6OB-qc-4zq" secondAttribute="bottom" constant="8" id="wXX-bE-qEh"/>
                 <constraint firstItem="wc8-uD-5sh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="zqP-7n-vcG"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
