--- a/KnightNews/JJVPreviewViewController.xib
+++ b/KnightNews/JJVPreviewViewController.xib
@@ -39,12 +39,12 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Excerpt" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j82-5l-dVa">
-                    <rect key="frame" x="20" y="325" width="280" height="223"/>
+                    <rect key="frame" x="20" y="325" width="280" height="233"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="ajy-Gc-2aj"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wc8-uD-5sh">
@@ -62,10 +62,11 @@
                 <constraint firstItem="j82-5l-dVa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="4dn-ic-hFC"/>
                 <constraint firstItem="wc8-uD-5sh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="G30-5j-kCO"/>
                 <constraint firstAttribute="trailing" secondItem="wc8-uD-5sh" secondAttribute="trailing" constant="20" id="HD0-Rv-Zjs"/>
+                <constraint firstItem="6OB-qc-4zq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="L8f-1c-xLP"/>
                 <constraint firstItem="j82-5l-dVa" firstAttribute="top" secondItem="6OB-qc-4zq" secondAttribute="bottom" constant="4" id="XUp-ty-eal"/>
                 <constraint firstItem="X9F-tc-wuk" firstAttribute="top" secondItem="wc8-uD-5sh" secondAttribute="bottom" constant="4" id="bMz-X4-HF7"/>
                 <constraint firstAttribute="trailing" secondItem="X9F-tc-wuk" secondAttribute="trailing" constant="20" id="dl1-b2-M6a"/>
-                <constraint firstAttribute="bottom" secondItem="j82-5l-dVa" secondAttribute="bottom" constant="20" id="eMb-PZ-Pdl"/>
+                <constraint firstAttribute="bottom" secondItem="j82-5l-dVa" secondAttribute="bottom" constant="10" id="eMb-PZ-Pdl"/>
                 <constraint firstItem="X9F-tc-wuk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="gNp-IO-oPw"/>
                 <constraint firstAttribute="trailing" secondItem="6OB-qc-4zq" secondAttribute="trailing" constant="20" id="jte-Vj-haO"/>
                 <constraint firstItem="wc8-uD-5sh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="zqP-7n-vcG"/>
