--- a/KnightNews/JJVEventsTableViewCell.xib
+++ b/KnightNews/JJVEventsTableViewCell.xib
@@ -14,22 +14,22 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0DH-TY-N7t">
-                        <rect key="frame" x="20" y="2" width="142" height="21"/>
+                        <rect key="frame" x="20" y="2" width="144" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="142" id="eVe-R9-XsT"/>
+                            <constraint firstAttribute="width" constant="144" id="yDa-YZ-mXN"/>
                             <constraint firstAttribute="height" constant="21" id="zLb-S2-Y3b"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desc" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="207" translatesAutoresizingMaskIntoConstraints="NO" id="qab-zw-HlB">
-                        <rect key="frame" x="20" y="20" width="207" height="21"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desc" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="216" translatesAutoresizingMaskIntoConstraints="NO" id="qab-zw-HlB">
+                        <rect key="frame" x="20" y="26" width="216" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="207" id="NGN-B4-7tb"/>
-                            <constraint firstAttribute="height" constant="21" id="zoN-up-yN7"/>
+                            <constraint firstAttribute="width" constant="216" id="AGn-ae-AAo"/>
+                            <constraint firstAttribute="height" constant="17" id="zoN-up-yN7"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -47,15 +47,14 @@
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="qab-zw-HlB" secondAttribute="bottom" id="09H-CG-Rbn"/>
                     <constraint firstItem="0DH-TY-N7t" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="1Gr-sf-yRu"/>
                     <constraint firstAttribute="trailing" secondItem="IMO-9g-6hw" secondAttribute="trailing" constant="11" id="83O-mG-RXk"/>
-                    <constraint firstItem="qab-zw-HlB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="N8D-me-AqV"/>
-                    <constraint firstItem="IMO-9g-6hw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="O8A-dc-e9i"/>
+                    <constraint firstItem="IMO-9g-6hw" firstAttribute="leading" secondItem="0DH-TY-N7t" secondAttribute="trailing" constant="85" id="8bt-Tt-cyl"/>
+                    <constraint firstAttribute="centerY" secondItem="IMO-9g-6hw" secondAttribute="centerY" id="Fai-NY-bI0"/>
                     <constraint firstItem="qab-zw-HlB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="QNZ-NV-e9A"/>
-                    <constraint firstAttribute="bottom" secondItem="0DH-TY-N7t" secondAttribute="bottom" constant="20" id="URU-U4-MF4"/>
                     <constraint firstItem="0DH-TY-N7t" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="YFF-Ix-WpY"/>
-                    <constraint firstAttribute="bottom" secondItem="qab-zw-HlB" secondAttribute="bottom" constant="2" id="agw-qn-hJs"/>
-                    <constraint firstAttribute="bottom" secondItem="IMO-9g-6hw" secondAttribute="bottom" constant="11" id="j0r-9B-vEu"/>
+                    <constraint firstItem="IMO-9g-6hw" firstAttribute="leading" secondItem="qab-zw-HlB" secondAttribute="trailing" constant="13" id="wbR-Fo-KlL"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
