--- a/KnightNews/JJVReaderViewController.xib
+++ b/KnightNews/JJVReaderViewController.xib
@@ -17,27 +17,41 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="jUj-nD-LE2">
-                    <rect key="frame" x="20" y="75" width="280" height="40"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="jUj-nD-LE2">
+                    <rect key="frame" x="20" y="75" width="280" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uLk-7K-RSQ">
-                    <rect key="frame" x="20" y="117" width="280" height="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uLk-7K-RSQ">
+                    <rect key="frame" x="20" y="98" width="280" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b69-rp-wEJ">
-                    <rect key="frame" x="20" y="146" width="280" height="367"/>
+                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b69-rp-wEJ">
+                    <rect key="frame" x="20" y="124" width="280" height="389"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 </webView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="b69-rp-wEJ" secondAttribute="bottom" constant="55" id="69p-lD-ZRD"/>
+                <constraint firstItem="uLk-7K-RSQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="FLt-B2-dIK"/>
+                <constraint firstItem="jUj-nD-LE2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="KD0-xb-vBA"/>
+                <constraint firstItem="b69-rp-wEJ" firstAttribute="top" secondItem="uLk-7K-RSQ" secondAttribute="bottom" constant="8" id="dbR-dk-D8g"/>
+                <constraint firstAttribute="trailing" secondItem="uLk-7K-RSQ" secondAttribute="trailing" constant="20" id="gtf-2l-hhv"/>
+                <constraint firstAttribute="trailing" secondItem="b69-rp-wEJ" secondAttribute="trailing" constant="20" id="nuq-3Q-3gM"/>
+                <constraint firstItem="uLk-7K-RSQ" firstAttribute="top" secondItem="jUj-nD-LE2" secondAttribute="bottom" constant="2" id="nvq-vU-EIJ"/>
+                <constraint firstAttribute="trailing" secondItem="jUj-nD-LE2" secondAttribute="trailing" constant="20" id="olr-nX-pea"/>
+                <constraint firstItem="jUj-nD-LE2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="75" id="pBe-lN-5E1"/>
+                <constraint firstItem="b69-rp-wEJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="txy-a5-BDC"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
