--- a/KnightNews/JJVPreviewViewController.xib
+++ b/KnightNews/JJVPreviewViewController.xib
@@ -18,62 +18,34 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="X9F-tc-wuk">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="X9F-tc-wuk">
                     <rect key="frame" x="20" y="255" width="280" height="47"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="47" id="0pu-ch-cU3"/>
-                        <constraint firstAttribute="width" constant="280" id="Cq3-44-eKm"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6OB-qc-4zq">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" fixedFrame="YES" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6OB-qc-4zq">
                     <rect key="frame" x="20" y="300" width="280" height="39"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="280" id="DYj-60-8wS"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Excerpt" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j82-5l-dVa">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Excerpt" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j82-5l-dVa">
                     <rect key="frame" x="20" y="325" width="280" height="193"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="193" id="aYm-CE-tYj"/>
-                        <constraint firstAttribute="width" constant="280" id="ajy-Gc-2aj"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wc8-uD-5sh">
-                    <rect key="frame" x="20" y="20" width="280" height="221"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wc8-uD-5sh">
+                    <rect key="frame" x="20" y="67" width="280" height="174"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="221" id="KIf-8Y-3qA"/>
-                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstAttribute="trailing" secondItem="j82-5l-dVa" secondAttribute="trailing" constant="20" id="2xN-BK-QDG"/>
-                <constraint firstItem="6OB-qc-4zq" firstAttribute="top" secondItem="X9F-tc-wuk" secondAttribute="bottom" constant="-2" id="3Ee-71-kyT"/>
-                <constraint firstItem="j82-5l-dVa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="4dn-ic-hFC"/>
-                <constraint firstItem="wc8-uD-5sh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="G30-5j-kCO"/>
-                <constraint firstAttribute="trailing" secondItem="wc8-uD-5sh" secondAttribute="trailing" constant="20" id="HD0-Rv-Zjs"/>
-                <constraint firstItem="6OB-qc-4zq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="L8f-1c-xLP"/>
-                <constraint firstItem="j82-5l-dVa" firstAttribute="top" secondItem="6OB-qc-4zq" secondAttribute="bottom" constant="-14" id="XUp-ty-eal"/>
-                <constraint firstItem="X9F-tc-wuk" firstAttribute="top" secondItem="wc8-uD-5sh" secondAttribute="bottom" constant="14" id="bMz-X4-HF7"/>
-                <constraint firstAttribute="trailing" secondItem="X9F-tc-wuk" secondAttribute="trailing" constant="20" id="dl1-b2-M6a"/>
-                <constraint firstItem="X9F-tc-wuk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="gNp-IO-oPw"/>
-                <constraint firstAttribute="trailing" secondItem="6OB-qc-4zq" secondAttribute="trailing" constant="20" id="jte-Vj-haO"/>
-                <constraint firstAttribute="bottom" secondItem="j82-5l-dVa" secondAttribute="bottom" constant="50" id="t8N-ka-KtL"/>
-                <constraint firstItem="wc8-uD-5sh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="zqP-7n-vcG"/>
-            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
